@@ -17,7 +17,6 @@ set(CLAZY_LIB_SRC
 
 set(CLAZY_CHECKS_SRCS
   ${CMAKE_CURRENT_LIST_DIR}/src/checks/detachingbase.cpp
-  ${CMAKE_CURRENT_LIST_DIR}/src/checks/inefficientqlistbase.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/checks/ruleofbase.cpp
 )
 include(CheckSources.cmake)
