@@ -5,7 +5,6 @@ add_test(NAME container-inside-loop COMMAND python3 run_tests.py container-insid
 add_test(NAME detaching-member COMMAND python3 run_tests.py detaching-member WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
 add_test(NAME heap-allocated-small-trivial-type COMMAND python3 run_tests.py heap-allocated-small-trivial-type WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
 add_test(NAME ifndef-define-typo COMMAND python3 run_tests.py ifndef-define-typo WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
-add_test(NAME inefficient-qlist COMMAND python3 run_tests.py inefficient-qlist WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
 add_test(NAME isempty-vs-count COMMAND python3 run_tests.py isempty-vs-count WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
 add_test(NAME jni-signatures COMMAND python3 run_tests.py jni-signatures WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
 add_test(NAME qhash-with-char-pointer-key COMMAND python3 run_tests.py qhash-with-char-pointer-key WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
@@ -65,7 +64,6 @@ add_test(NAME const-signal-or-slot COMMAND python3 run_tests.py const-signal-or-
 add_test(NAME detaching-temporary COMMAND python3 run_tests.py detaching-temporary WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
 add_test(NAME foreach COMMAND python3 run_tests.py foreach WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
 add_test(NAME incorrect-emit COMMAND python3 run_tests.py incorrect-emit WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
-add_test(NAME inefficient-qlist-soft COMMAND python3 run_tests.py inefficient-qlist-soft WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
 add_test(NAME install-event-filter COMMAND python3 run_tests.py install-event-filter WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
 add_test(NAME non-pod-global-static COMMAND python3 run_tests.py non-pod-global-static WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
 add_test(NAME overridden-signal COMMAND python3 run_tests.py overridden-signal WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/)
