@@ -227,7 +227,6 @@ clazy runs all checks from level1 by default.
     - [detaching-member](docs/checks/README-detaching-member.md)
     - [heap-allocated-small-trivial-type](docs/checks/README-heap-allocated-small-trivial-type.md)
     - [ifndef-define-typo](docs/checks/README-ifndef-define-typo.md)
-    - [inefficient-qlist](docs/checks/README-inefficient-qlist.md)
     - [isempty-vs-count](docs/checks/README-isempty-vs-count.md)
     - [jni-signatures](docs/checks/README-jni-signatures.md)
     - [qhash-with-char-pointer-key](docs/checks/README-qhash-with-char-pointer-key.md)
@@ -291,7 +290,6 @@ clazy runs all checks from level1 by default.
     - [detaching-temporary](docs/checks/README-detaching-temporary.md)
     - [foreach](docs/checks/README-foreach.md)
     - [incorrect-emit](docs/checks/README-incorrect-emit.md)
-    - [inefficient-qlist-soft](docs/checks/README-inefficient-qlist-soft.md)
     - [install-event-filter](docs/checks/README-install-event-filter.md)
     - [non-pod-global-static](docs/checks/README-non-pod-global-static.md)
     - [overridden-signal](docs/checks/README-overridden-signal.md)
