@@ -1,7 +1,0 @@
-{
-    "tests" : [
-        {
-            "filename" : "main.cpp"
-        }
-    ]
-}
