@@ -1,8 +1,0 @@
-{
-    "tests" : [
-        {
-            "filename" : "main.cpp",
-            "should_run_on_32bit" : false
-        }
-    ]
-}
